Teraz strona admina jest dynamiczna - autorzy dodają prace, a admin widzi, że ktoś coś dodał:)

--- a/elements/authorTemplate.html
+++ b/elements/authorTemplate.html
@@ -1,5 +1,5 @@
 <include href="elements/_header.html" />
 
-<p>Zalogowany jako autor:)</p>
+<p><a href="newArticleForm.php">Dodaj artykuł</a></p>
 <p><a href="login.php">Wyloguj się</a></p>
 <include href="elements/_footer.html" />
