--- a/elements/newArticleTemplate.html
+++ b/elements/newArticleTemplate.html
@@ -1,9 +1,9 @@
 <include href="elements/_header.html" />
 <h2>Nowy artykuł</h2>
 <form action='doNewArticle.php' method='POST'>
-<input type="hidden" name="AUTHOR_ID" value="1">
-Stopień naukowy: <input type="text" name="DEGREE"><br>
-Imię i nazwisko: <input type="text" name="AUTHOR_NAME"><br>
+<input type="hidden" name="AUTHOR_ID" value="{{ $_SESSION['ID'] }}">
+<input type="hidden" name="AUTHOR_NAME" value="{{ $_SESSION['AUTHOR_NAME'] }}">
+<input type="hidden" name="AUTHOR_DEGREE" value="{{ $_SESSION['AUTHOR_DEGREE'] }}">
 Tytuł pracy: <input type="text" name="ARTICLE_NAME"><br>
 Kategoria: <input type="text" name="CATEGORY_NAME"><br>
 <input type="submit" value="Dodaj artykuł">
