--- a/elements/registrationTemplate.html
+++ b/elements/registrationTemplate.html
@@ -1,9 +1,11 @@
 <include href="elements/_header.html" />
 <h2>Nowa rejestracja</h2>
-Możesz zarejestrować się tylko jako autor.
+Można zarejestrować się tylko jako autor.
 <form action='doRegistration.php' method='POST'>
 Login: <input type="text" name="LOGIN"><br>
 Hasło: <input type="password" name="PASSWORD"><br>
+Imię i nazwisko: <input type="text" name="NAME"><br>
+Stopień naukowy: <input type="text" name="DEGREE"><br>
 <input type="hidden" name="MODE" value="AUTHOR">
 <input type="submit" value="Zarejestruj się">
 </form>
