--- a/elements/adminTemplate.html
+++ b/elements/adminTemplate.html
@@ -1,5 +1,5 @@
 <include href="elements/_header.html" />
-<p><a href="login.php">Wyloguj się</a></p>
+<p><a href="doLogout.php">Wyloguj się</a></p>
 <p>Termin recenzji upływa 2017-06-10</p>
 <p align="center"><b>Tematy prac:</b></p>
 <table border=1 bgcolor="#ffffff">
@@ -8,7 +8,7 @@
 <repeat group="{{ @articles }}" value="{{ @article }}">
 <tr>
 <td>{{ @article->ID }}</td>
-<td>{{ @article->DEGREE }}</td>
+<td>{{ @article->AUTHOR_DEGREE }}</td>
 <td>{{ @article->AUTHOR_NAME }}</td>
 <td>{{ @article->ARTICLE_NAME }}</td>
 <td>{{ @article->CATEGORY_NAME }}</td>
