--- a/elements/registrationTemplate.html
+++ b/elements/registrationTemplate.html
@@ -2,10 +2,10 @@
 <h2>Nowa rejestracja</h2>
 Można zarejestrować się tylko jako autor.
 <form action='doRegistration.php' method='POST'>
-Login: <input type="text" name="LOGIN"><br>
-Hasło: <input type="password" name="PASSWORD"><br>
-Imię i nazwisko: <input type="text" name="NAME"><br>
-Stopień naukowy: <input type="text" name="DEGREE"><br>
+Login: <input type="text" name="LOGIN"><br><br>
+Hasło: <input type="password" name="PASSWORD"><br><br>
+Imię i nazwisko: <input type="text" name="NAME"><br><br>
+Stopień naukowy: <input type="text" name="DEGREE"><br><br>
 <input type="hidden" name="MODE" value="AUTHOR">
 <input type="submit" value="Zarejestruj się">
 </form>
