--- a/elements/registrationTemplate.html
+++ b/elements/registrationTemplate.html
@@ -6,6 +6,7 @@ Login: <input type="text" name="LOGIN"><br><br>
 Hasło: <input type="password" name="PASSWORD"><br><br>
 Imię i nazwisko: <input type="text" name="NAME"><br><br>
 Stopień naukowy: <input type="text" name="DEGREE"><br><br>
+Adres e-mail: <input type="text" name="E_MAIL"><br><br>
 <input type="hidden" name="MODE" value="AUTHOR">
 <input type="submit" value="Zarejestruj się">
 </form>
