--- a/elements/reviewerTemplate.html
+++ b/elements/reviewerTemplate.html
@@ -2,23 +2,23 @@
 
 <p align="center"><b>Tematy prac:</b></p>
 <table border=1 bgcolor="#ffffff">
-<tr bgcolor="#dddddd"><th>L.p.</th><th>Tytuł</th><th>Kategoria</th><th>Recenzja</th><th>Praca</th><th></th></tr>
+<tr bgcolor="#dddddd"><th>L.p.</th><th>Tytuł</th><th>Kategoria</th><th>Recenzja</th><th>Praca</th></tr>
 
 <repeat group="{{ @articles }}" value="{{ @article }}">
 <tr>
 <td>{{ @article->ID }}</td>
 <td>{{ @article->ARTICLE_NAME }}</td>
 <td>{{ @article->CATEGORY_NAME }}</td>
-<td>{{ @article->REVIEW_EVALUATION }}</td>
-<td><a href="insertFile.php?ARTICLE_ID={{ @article->ID }}">Wstaw/zmień plik</a> 
+<td>{{ @article->REVIEW_EVALUATION }}
+<a href="editReview.php?ARTICLE_ID={{ @article->ID }}">Edytuj</a></td>
+<td>
 <a href="downloadFile.php?ARTICLE_ID={{ @article->ID }}">Pobierz plik</a>
 </td>
-<td><a href="doDelete.php?ARTICLE_ID={{ @article->ID }}">Usuń</a></td>
+<td>
 </tr>
 </repeat>
 
 </table>
 
-<p><a href="newArticleForm.php">Dodaj artykuł</a></p>
 <p><a href="doLogout.php">Wyloguj się</a></p>
 <include href="elements/_footer.html" />
